Fixed layout issue for the page content display

--- a/frontend/public/styles.css
+++ b/frontend/public/styles.css
@@ -23,6 +23,18 @@ header {
   padding-top: 3%;
 }
 
+.full-page {
+  display: flex;
+  height: calc(100vh - 6em);
+  background-color: #fbeddd;
+  justify-content: center;
+}
+
+.centered-section {
+  min-width: 30em;
+  max-width: 31em; 
+}
+
 @media screen and (max-width: 700px) {
   .pageHeading {
     text-align: center;
